aggiornamento sezione grafica di base