@@ -47,6 +47,13 @@
       <version>${javafx.version}</version>
     </dependency>
 
+	<!-- https://mvnrepository.com/artifact/com.gluonhq.scenebuilder/kit -->
+	<dependency>
+	    <groupId>com.gluonhq.scenebuilder</groupId>
+	    <artifactId>kit</artifactId>
+	    <version>25.0.0</version>
+	</dependency>
+
   </dependencies>
 
   <build>
@@ -67,7 +74,10 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>Grafica.Home</mainClass>
+          <mainClass>Grafica.Main</mainClass>
+          <jvmArgs>
+        	<jvmArg>--enable-native-access=javafx.graphics</jvmArg>
+     	  </jvmArgs>
         </configuration>
       </plugin>
 
